--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-react": "^7.17.12",
     "babel-loader": "^8.2.5",
     "flow-bin": "^0.179.0",
+    "html-inline-script-webpack-plugin": "^3.0.0",
     "prettier": "2.6.2",
     "webpack-cli": "^4.9.2"
   },
